--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
-                <p>Dr. P.P. Shajmon joined the college on 16th March 2006 as Assistant Professor in Social Science 
+                <p>Dr. P.P. Shajimon joined St. Thomas College Of Teacher Education, Pala on 16th March 2006 as Assistant Professor in Social Science 
                     Education. He has more than 28 years of teaching experience in various Colleges of Teacher Education, 
                     under Mahatma Gandhi University. He qualified B.A (Economics) from St. Thomas College, Pala; 
                     M.A (Economics) from Nirmala College, Muvattupuzha,M.A.(Sociology) from IGNOU, Delhi, B.Ed 
@@ -47,10 +47,10 @@
                     Gandhi University. He also qualified NET (Education). His interesting areas of teaching are Social 
                     Science Education, Philosophy of Education, Sociology of Education, Indian Philosophy, Elementary 
                     Education, Secondary Education, Teacher Education and Guidance and Counselling.<br><br>
-                    Dr. Shajimon was a Research Guide at Bharathiar University, Coimbatore, Tamil Nadu. He supervised 
+                    I was a Research Guide at Bharathiar University, Coimbatore, Tamil Nadu. I supervised 
                     many Ph.D Theses of Bharathiar University and M.Ed Dissertations of Mahatma Gandhi University, 
-                    Kottayam. He completed two Minor Research Projects and published many research papers in reputed 
-                    journals. He co-ordinated seminars, participated and presented many papers in various seminars at 
+                    Kottayam. I've completed two Minor Research Projects and published many research papers in reputed 
+                    journals. I had co-ordinated seminars, participated and presented many papers in various seminars at 
                     national and international levels.</p>
 
                 <div class="tab-titles">
@@ -60,20 +60,22 @@
                 </div>
                 <div class="tab-contents active-tab" id="Education">
                     <ul>
-                        <li><span>1987</span><br>B.A. Economics from St. Thomas College, Pala</li>
-                        <li><span>1989</span><br>M.A. Economics from Nirmala College, Muvattupuzha</li>
-                        <li><span>1992</span><br>B.Ed in History from College of Teacher Education, Adoor</li>
-                        <li><span>1995</span><br>M.Ed in Social Science Education from School of Pedagogical Sciences, MG University</li>
-                        <li><span>1996</span><br>NET - Education from UGC</li>
-                        <li><span>2010</span><br>Ph.D in Education from School of Pedagogical Sciences, MG University</li>
                         <li><span>2023</span><br>M.A. Sociology from IGNOU,Delhi</li>
+                        <li><span>2010</span><br>Ph.D in Education from School of Pedagogical Sciences, MG University</li>
+                        <li><span>1996</span><br>NET - Education from UGC</li>
+                        <li><span>1995</span><br>M.Ed in Social Science Education from School of Pedagogical Sciences, MG University</li>
+                        <li><span>1992</span><br>B.Ed in History from College of Teacher Education, Adoor</li>
+                        <li><span>1989</span><br>M.A. Economics from Nirmala College, Muvattupuzha</li>
+                        <li><span>1987</span><br>B.A. Economics from St. Thomas College, Pala</li>
+
+                        
                     </ul>
                 </div>
                 <div class="tab-contents" id="experience">
                     <ul>
-                        <li><span>14.2.2022 - Current</span><br> Associate Professor<br>St. Thomas College of Teacher Education,Pala (M.Ed. Department)</li>
-                        <li><span>2.6.2021 - 13.2.2022</span><br>Principal<br>Labour India College of Teacher Education, Marangattupally</li>
-                        <li><span>16.3.2006 - 21.5.2021</span><br>Associate Professor<br>St. Thomas College of Teacher Education, Pala</li>
+                        <li><span>14.02.2022 - Current</span><br> Associate Professor<br>St. Thomas College of Teacher Education,Pala (M.Ed. Department)</li>
+                        <li><span>02.06.2021 - 13.2.2022</span><br>Principal<br>Labour India College of Teacher Education, Marangattupally</li>
+                        <li><span>16.03.2006 - 21.5.2021</span><br>Associate Professor<br>St. Thomas College of Teacher Education, Pala</li>
                         <li><span>26.11.2002 - 15.3.2006</span><br>Lecturer<br>University College of Teacher Education, Thodupuzha</li>
                         <li><span>20.03.2002 - 26.11.2002</span><br>Lecturer<br>University College of Teacher Education, Thripunithura</li>
                         <li><span>30.03.2001 - 19.03.2002</span><br>Lecturer<br>University College of Teacher Education, Thodupuzha</li>
@@ -164,7 +166,7 @@
                 <div class="social-icons">
                     <a href="https://facebook.com/shaji.mon.10236"><i class="fab fa-facebook"></i></a>
                     <a href=""><i class="fab fa-twitter-square"></i></a>
-                    <a href=""><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/drppshajimon/"><i class="fab fa-instagram"></i></a>
                     <a href=""><i class="fab fa-linkedin"></i></a>
                 </div>
                 <a href="images/drpps_resume.pdf" download class="btn btn2">Download Resume</a>
@@ -181,7 +183,7 @@
         </div>
     </div>
     <div class="copyright">
-        <p>Copyright © Dr. P.P. Shajimon. Website designed and developed<i class="fas fa-heart"></i> by <a href="https://www.instagram.com/tech_psycho_abhi_/"></a>Abhijith S</p>
+        <p>Copyright © Dr. P.P. Shajimon. Website designed and developed with <i class="fas fa-heart"></i> by <a href="https://www.instagram.com/tech_psycho_abhi_/"></a>Abhijith S</p>
     </div>
 </div>
 
