--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
                 <div class="tab-contents" id="experience">
                     <ul>
                         <li><span>14.02.2022 - Current</span><br> Associate Professor<br>St. Thomas College of Teacher Education,Pala (M.Ed. Department)</li>
-                        <li><span>02.06.2021 - 13.2.2022</span><br>Principal<br>Labour India College of Teacher Education, Marangattupally</li>
-                        <li><span>16.03.2006 - 21.5.2021</span><br>Associate Professor<br>St. Thomas College of Teacher Education, Pala</li>
-                        <li><span>26.11.2002 - 15.3.2006</span><br>Lecturer<br>University College of Teacher Education, Thodupuzha</li>
+                        <li><span>02.06.2021 - 13.02.2022</span><br>Principal<br>Labour India College of Teacher Education, Marangattupally</li>
+                        <li><span>16.03.2006 - 21.05.2021</span><br>Associate Professor<br>St. Thomas College of Teacher Education, Pala</li>
+                        <li><span>26.11.2002 - 15.03.2006</span><br>Lecturer<br>University College of Teacher Education, Thodupuzha</li>
                         <li><span>20.03.2002 - 26.11.2002</span><br>Lecturer<br>University College of Teacher Education, Thripunithura</li>
                         <li><span>30.03.2001 - 19.03.2002</span><br>Lecturer<br>University College of Teacher Education, Thodupuzha</li>
                         <li><span>01.11.1999 - 30.03.2001</span><br>Lecturer<br>University College of Teacher Education, Kudamaloor, Kottayam</li>
@@ -183,7 +183,7 @@
         </div>
     </div>
     <div class="copyright">
-        <p>Copyright © Dr. P.P. Shajimon. Website designed and developed with <i class="fas fa-heart"></i> by <a href="https://www.instagram.com/tech_psycho_abhi_/"></a>Abhijith S</p>
+        <p>Copyright © Dr. P.P. Shajimon. Website designed and developed with <i class="fas fa-heart"></i> by <a href="https://www.instagram.com/tech_psycho_abhi_">Abhijith S</a></p>
     </div>
 </div>
 
