--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <div class="contact-left">
                 <h1 class="sub-title">Contact Me</h1>
                 <p><i class="fas fa-paper-plane"></i><a href="mailto:drppshajimon@gmail.com">drppshajimon@gmail.com</a></p>
-                <p><i class="fas fa-phone-square-alt"></i><a href="wa.me/919446502832">9446502832</a></p>
+                <p><i class="fas fa-phone-square-alt"></i><a href="https://wa.me/919446502832</a></p>
                 <div class="social-icons">
                     <a href="https://facebook.com/shaji.mon.10236"><i class="fab fa-facebook"></i></a>
                     <a href=""><i class="fab fa-twitter-square"></i></a>
