--- a/index.html
+++ b/index.html
@@ -97,27 +97,27 @@
     </div>
 </div>
 <!-- ---------services---------------- -->
-<!-- <div id="services">
+<div id="services">
     <div class="container">
-        <h1 class="sub-title">My Services</h1>
+        <h1 class="sub-title">My Works</h1>
         <div class="services-list">
             <div>
-                <i class="fas fa-code"></i>
-                <h2>Web Design</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nulla nibh, tincidunt sit amet sapien quis.</p>
-                <a href="#">Learn more</a>
+                <i class="fa-solid fa-pen-to-square"></i>
+                <h2>29+ Years of Teaching Experience</h2>
+                <p>More than 29 years of teaching experience in various colleges</p>
+                <a href="images/Teaching_Experience_Drpps .pdf" download class="btn btn2">More details</a>
             </div>
             <div>
-                <i class="fas fa-crop-alt"></i>
-                <h2>UI/UX Design</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nulla nibh, tincidunt sit amet sapien quis.</p>
-                <a href="#">Learn more</a>
+                <i class="fa-solid fa-pen-nib"></i>
+                <h2>60+ Papers Published</h2>
+                <p>More than 60 Papers Published in International and National Journals</p>
+                <a href="images/Papers_Published_Drpps .pdf" download class="btn btn2">More Details</a>
             </div>
             <div>
-                <i class="fab fa-app-store"></i>
-                <h2>App Design</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nulla nibh, tincidunt sit amet sapien quis.</p>
-                <a href="#">Learn more</a>
+                <i class="fa-solid fa-users"></i>
+                <h2>40+ Seminars / Workshops Participated</h2>
+                <p>Participated in more than 40  International, National and State Level Seminars / Workshops</p>
+                <a href="images/Seminars_Workshops_Drpps .pdf" download class="btn btn2">More Details</a>
             </div>
         </div>
     </div>
@@ -161,8 +161,8 @@
         <div class="row">
             <div class="contact-left">
                 <h1 class="sub-title">Contact Me</h1>
-                <p><i class="fas fa-paper-plane"></i><a href="mailto:drppshajimon@gmail.com">drppshajimon@gmail.com</a></p>
-                <p><i class="fas fa-phone-square-alt"></i><a href="https://wa.me/919446502832">9446502832</a></p>
+                <p><i class="fas fa-paper-plane"><a href="mailto:drppshajimon@gmail.com">drppshajimon@gmail.com</a></i></p>
+                <p><i class="fa-brands fa-whatsapp"><a href="https://wa.me/919446502832">9446502832</a></i></p>
                 <div class="social-icons">
                     <a href="https://facebook.com/shaji.mon.10236"><i class="fab fa-facebook"></i></a>
                     <a href=""><i class="fab fa-twitter-square"></i></a>
