--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul id="sidemenu">
                 <li><a href="#header">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#services">My Works</a></li>
+                <li><a href="#services">Achievements</a></li>
                 <!-- <li><a href="#portfolio">Portfolio</a></li> -->
                 <li><a href="#contact">Contact</a></li>
                 <i class="fas fa-times" onclick="closemenu()"></i>
@@ -99,7 +99,7 @@
 <!-- ---------services---------------- -->
 <div id="services">
     <div class="container">
-        <h1 class="sub-title">My Works</h1>
+        <h1 class="sub-title">My Achievements</h1>
         <div class="services-list">
             <div>
                 <i class="fa-solid fa-pen-to-square"></i>
