--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
                         <li><span>Co-Investigator</span><br>Effect of Cognitive Apprenticeship Model on Achievement and select Social Skills among the Commerce Students of Higher Secondary School Students in Kerala State (Completed)</li>
                     </ul>
                 </div>
+
+                Github Pages by Abhijith S
             </div>
         </div>
     </div>
